<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".notice.UploadNotice"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/uploadNoticeImage"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:elevation="5dp"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">





            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/circle_red"
                android:padding="15dp"
                android:src="@drawable/ic_uploadnotice" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#c1c1c1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_an_image"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:padding="5dp"
                android:layout_marginTop="10dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/noticeCategory"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"
            android:gravity="center"
            android:layout_marginVertical="16dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/noticeTitle"
            android:hint="@string/notice_title" />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/upload_notice"
    android:textAllCaps="false"
    android:layout_marginTop="16dp"
    android:id="@+id/uploadNoticeBtn"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="400dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/NoticeImageView"
                android:layout_width="match_parent" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>