<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.LoginHomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:elevation="2dp"
            android:layout_margin="6dp"
            app:cardUseCompatPadding="true">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:sliderScrollTimeInSec="3"
                app:sliderAnimationDuration="750"
                app:sliderAutoCycleDirection="right"
                app:sliderIndicatorRadius="1.25dp"
                app:sliderIndicatorSelectedColor="#5A5858"
                app:sliderIndicatorUnselectedColor="#c1c1c1"
                app:sliderStartAutoCycle="true" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/admin_login"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="5dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="25dp"
                app:cardCornerRadius="50dp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/gradient_1"
                        android:padding="15dp"
                        android:src="@drawable/ic_admin"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratregular"
                    android:text="@string/admin_login"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"                            android:fontFamily="@font/montserratregular"
                        android:text="Take the admin control and upload the information using your panel"
                        android:textAlignment="center"
                        android:textSize="10sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/faculty_login"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="5dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="25dp"
                app:cardCornerRadius="50dp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/gradient_2"
                        android:padding="15dp"
                        android:src="@drawable/ic_faculty"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/faculty_login"
                        android:fontFamily="@font/montserratregular"
                        android:textAlignment="center"
                        android:textSize="20sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="View your classes, upload assignments, review work and a lot more features"
                        android:fontFamily="@font/montserratregular"
                        android:textAlignment="center"
                        android:textSize="10sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/student_login"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="5dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="25dp"
                app:cardCornerRadius="50dp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/gradient_3"
                        android:padding="15dp"
                        android:src="@drawable/ic_student"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/student_login"
                        android:fontFamily="@font/montserratregular"
                        android:textAlignment="center"
                        android:textSize="20sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Explore all the organised information with your persnolised account"
                        android:fontFamily="@font/montserratregular"
                        android:textAlignment="center"
                        android:textSize="10sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>